--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 #container .board .column .slot {
   width: 128px;
   height: 128px;
-  background: transparent url(/slot.png) center no-repeat;
+  background: transparent url(slot.png) center no-repeat;
   background-size: contain; /* slot.png is 256x256 for hires screens */
 }
 
